--- a/board.html
+++ b/board.html
@@ -32,7 +32,7 @@
             data.forEach(elem => {
                 document.querySelector("#container").innerHTML += `
                     <tr>
-                        <td>${elem._id}</td>
+                        <td>${elem.id}</td>
                         <td>${elem.제목}</td>
                         <td>${elem.내용}</td>
                         <td>${elem.작성자}</td>
