--- a/board.html
+++ b/board.html
@@ -26,7 +26,7 @@
         </tr>
     </table>
     <script>
-        fetch("https://121.167.154.99:8002/api/Boards")
+        fetch("https://121.167.154.99:8002/api/Boards", {mode: 'no-cors'})
           .then((response) => response.json())
           .then((data) => 
             data.forEach(elem => {
